# argentina-datos-bot

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
argentina-bot/utils/: get_token.py
aws_solutions_architect_project/: aws_solutions_architect_project_stack.py
backend/: README.md  component.py
backend/ecs/: infrastructure.py
ecs-argentina-datos/argentina-bot/: app.py
src/ecs/: Dockerfile  pyproject.toml
src/ecs/argentina-bot/: app.py
src/ecs/argentina-bot/utils/: emae.py  get_inflation.py  lambda_invoke.py  rates.py
src/lambda/: change_rates.py  emae.py  inflation.py
tests/unit/: test_aws_solutions_architect_project_stack.py
