[tool.poetry]
name = "aws-solutions-architect-project"
version = "0.1.0"
description = "Project for the ITBA Cloud Architecture Final Assessment"
authors = ["nmema <nicolas.a.mema@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_solutions_architect_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
